Change all-subcategoty api

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
@@ -41,7 +41,7 @@
                                     [class.isError]="controls.subCategoryId.touched && controls.subCategoryId.invalid">
                                     <option value="" [selected]="true" [disabled]="true">Select SubCategory</option>
                                     <option *ngFor="let subcategory of subcategories" [value]="subcategory?.id">
-                                        {{subcategory?.subCategoryName}}
+                                        {{subcategory?.subCategoryName | titlecase}}
                                     </option>
                                 </select>
                                 <mat-error
