--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -85,8 +85,8 @@
                         {{element?.order?.product?.productName ? element?.order?.product?.productName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="productWeight">
-                    <mat-header-cell *matHeaderCellDef>Product Weight(in gm)</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
+                    <mat-header-cell *matHeaderCellDef class="align-right">Product Weight(in gm)</mat-header-cell>
+                    <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.order?.product?.weight ? element?.order?.product?.weight : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="sku">
@@ -95,23 +95,23 @@
                         {{element?.order?.product?.sku ? element?.order?.product?.sku : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="invoiceAmount">
-                    <mat-header-cell *matHeaderCellDef class="d-flex justify-content-end">Invoice Amount
+                    <mat-header-cell *matHeaderCellDef class="align-right">Invoice Amount
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="d-flex justify-content-end">
+                    <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.finalOrderPrice ? element?.finalOrderPrice : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="initialAmount">
-                    <mat-header-cell *matHeaderCellDef class="d-flex justify-content-end">Initial Amount
+                    <mat-header-cell *matHeaderCellDef class="align-right">Initial Amount
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="d-flex justify-content-end">
+                    <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.initialPayment ? element?.initialPayment : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="transactionAmount">
-                    <mat-header-cell *matHeaderCellDef class="d-flex justify-content-end">Transaction Amount
+                    <mat-header-cell *matHeaderCellDef class="align-right">Transaction Amount
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="d-flex justify-content-end">
+                    <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerId">
