--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -600,3 +600,7 @@ mat-header-row {
 	white-space: nowrap;
 	overflow: hidden;
 }
+.align-right{
+	justify-content: flex-end !important;
+	text-align: end !important;
+}
