--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-view/emi-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-view/emi-details-view.component.html
@@ -8,7 +8,7 @@
                 User ID
             </div>
             <div class="col-md-7">
-                {{orderData.order.customerDetails.customerUniqueId}}
+                {{orderData?.customerDetails.customerUniqueId}}
             </div>
         </div>
         <div class="row py-2">
@@ -16,7 +16,7 @@
                 Order ID
             </div>
             <div class="col-md-7">
-                {{orderData.order.orderUniqueId}}
+                {{orderData?.orderUniqueId}}
             </div>
         </div>
         <div class="row py-2">
@@ -24,7 +24,7 @@
                 Order Total Amount
             </div>
             <div class="col-md-7">
-                {{orderData.emiAmount}}
+                {{orderData?.orderdetails[0].finalOrderPrice}}
             </div>
         </div>
         <div class="row py-2">
@@ -32,7 +32,7 @@
                 Order Initial Amount
             </div>
             <div class="col-md-7">
-                {{orderData.emiAmount}}
+                {{orderData?.orderdetails[0].initialPayment}}
             </div>
         </div>
         <div class="row py-2">
@@ -40,7 +40,7 @@
                 EMI Start Date
             </div>
             <div class="col-md-7">
-                {{orderData.dueDate | date:'medium'}}
+                {{orderData?.EmiStartDate | date:'medium'}}
             </div>
         </div>
         <div class="row py-2">
@@ -48,7 +48,7 @@
                 EMI End Date
             </div>
             <div class="col-md-7">
-                {{orderData.paymentRecievedDate | date:'medium'}}
+                {{orderData?.EmiEndDate | date:'medium'}}
             </div>
         </div>
     </div>
