--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -191,7 +191,7 @@
                         numbersOnly />
                     </div>
                     <div class="col-3">
-                      <label>By tenure(m)</label>
+                      <label>By Tenure(m)</label>
                       <ng-select [items]="tenure" [multiple]="true" bindLabel="paymentType" [closeOnSelect]="false"
                         bindValue="paymentTypeId" formControlName="multiSelect1">
 
