--- a/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
@@ -28,8 +28,7 @@
                     controls?.reportType?.value == '2' ||  controls?.reportType?.value == '3' || 
                     controls?.reportType?.value == '4' || controls?.reportType?.value == '5'">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '1'">User
-                                From</label>
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '1'">Merchant</label>
                             <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '2'">Deposit
                                 Funds Origin</label>
                             <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '3'">EMI
