--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -178,7 +178,7 @@
                     </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns;sticky: true" style="width: 350%;"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns;" style="width: 350%;"></mat-header-row>
 
                 <mat-row *matRowDef="let row; columns: displayedColumns" style="width: 350%;"></mat-row>
             </mat-table>
