--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form [formGroup]="approvalForm">
-        <div class="row justify-content-center kt-margin-b-25">
+        <div class="row justify-content-center">
             <!-- <div class="col-8 bordered">
                 <div class="row head">
                     <div class="col-4">Field</div>
@@ -201,7 +201,7 @@
     </form>
 </div>
 <div class="row py-3" *ngIf="!disable">
-    <div class="col-12">
+    <div class="col-12 text-center">
         <kt-button [value]="'Apply'" [type]="'button'" (click)=" applyForm()"></kt-button>
         <span class="kt-padding-10"></span>
         <kt-button [value]="'Cancel'" [type]="'reset'" (click)="cancel()"></kt-button>
