--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
@@ -1,13 +1,21 @@
 :host {
 	.height220 {
-		height: 220px;
+		height: 270px;
 	}
 	::ng-deep.mat-tab-header {
 		position: relative !important;
 	}
+	// ::ng-deep.mat-tab-body-content{
+	// 	padding-top: 0em !important;
+	// }
+	::ng-deep.mat-tab-label{
+        min-width: 130px !important;
+		padding: 0 !important;
+        // height: 30px !important;
+    }
 	.addmore {
 		position: absolute;
-		top: 10px;
+		top: 30px;
 		left: 150px;
 		background: transparent;
 		border: thin solid #454d67;
