--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.scss
@@ -3,13 +3,17 @@
     ::ng-deep.mat-tab-header {
 		position: relative !important;
     }
+    ::ng-deep.mat-tab-label{
+        min-width: 130px !important;
+        padding: 0 !important;
+    }
     // select{
     //     -webkit-appearance: none !important;
     //     -moz-appearance: none !important;
     //   }
     
     .addMore{
-        width: 30%;
+        width: 40%;
         position: absolute;
 		top: 10px;
     }
@@ -29,6 +33,7 @@
 		border: thin solid #454D67 !important;
         border-radius: 5px !important;
         font-weight: bold !important;
+        margin-left: 20px !important;
     }
     .pacekts-label {
         font-size: 12px;
